[package]
name = "apirunner"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
colour = "0.6.0"
chrono = "0.4.22"

