[package]
name = "apirunner"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
colour = "0.6.0"
chrono = "0.4.22"
rusoto_signature = "0.48.0"
bytes = "1.1.0"
#aws-config = "0.51.0"
#aws-sdk-sqs = "0.21.0"
rusoto_core = "0.48.0"
rusoto_sqs = "0.48.0"
rusoto_credential = "0.48.0"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true